vendor/pin-project-1.0.7/tests/ui/pinned_drop/pinned-drop-no-attr-arg.stderr
error[E0119]: conflicting implementations of trait `pin_project::__private::PinnedDrop` for type `S`
  --> $DIR/pinned-drop-no-attr-arg.rs:12:1
   |
5  | #[pin_project]
   | -------------- first implementation here
...
12 | impl PinnedDrop for S {
   | ^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `S`
